# tinder_v2

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
favorites/: models.py
favorites/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: Navbar.vue
frontend/src/views/: Home.vue
gallery/: admin.py  models.py
gallery/migrations/: 0001_initial.py
profiles/: admin.py  models.py  schema.py  services.py
profiles/migrations/: 0001_initial.py  0002_auto_20211122_0839.py  0003_auto_20211122_1220.py  0004_auto_20211122_1241.py  0005_alter_language_options.py
tinder_v2/: asgi.py  settings.py  urls.py  wsgi.py
