[tool.poetry]
name = "tinder_v2"
version = "0.1.0"
description = "tinder v2"
authors = ["Oleg <obarnev@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
